# obj

./: Cargo.toml  README.md
objectify-bin/: Cargo.toml
objectify-bin/src/: main.rs
src/: copy.rs  lib.rs  main.rs  util.rs
src/elf/: mod.rs
