[package]
name = "objectify"
license = "MIT"
description = "A crappy object file manipulation tool/library."
homepage = "https://github.com/32Bites/obj"
readme = "README.md"
authors = ["Noah Shanaberger <noah@thenoah.party>"]
version = "0.2.1"
edition = "2021"
default-run = "obj"

[workspace]
members = ["objectify-bin"]
default-members = ["objectify-bin"]

[dependencies]
object = "0.30.3"
# goblin = "0.6.0"

[[bin]]
name = "obj"
path = "objectify-bin"
